Full
			                                                                              ^
  cast to Object for a varargs call
  cast to Object[] for a non-varargs call and to suppress this warning
/ado-agent-workdir/1/s/***-rcb-atlas-interface-services/src/main/java/scb/process/FileTransferObjectIMFT_Solace.java:884: error: incompatible types: Date cannot be converted to String
			        map.put("GrafanaFTData: eodDate", eodDate);
			                                          ^
/ado-agent-workdir/1/s/***-rcb-atlas-interface-services/src/main/java/scb/process/FileTransferObjectIMFT_Solace.java:885: error: incompatible types: Time cannot be converted to String
			        map.put("currTime", currTime);
			                            ^


String logDetails = eodDate + "#" + currTime + "#" + finalStatusFlag + "#" + finalStatusDesc + "#" + wrapper.fileTransferId+"#"+idNumber;
			try{
				if ((SCBPARAMCache.getInstance().getCache("ENABLE_MOINTOR_LOGGING") != null)&& (SCBPARAMCache.getInstance().getCache("ENABLE_MOINTOR_LOGGING").trim().equals("Y"))){
			        Map<String, String> map = new HashMap<>();
			        map.put("GrafanaFTData: eodDate", eodDate);
			        map.put("currTime", currTime);
			        map.put("finalStatusFlag", finalStatusFlag);
			        map.put("finalStatusDesc", finalStatusDesc);
			        map.put("finalFTFID", wrapper.fileTransferId);
			        map.put("idNumber", idNumber);
			        String json = jsonLogWriter.mapToJson(map);
			        jsonLog.printGrafanaLog(json);
				}}catch(Exception e){
				logWriter.println("isMointorLoggingEnabled >>>>"+e);}
